syntax = "proto3";
package user;

service User {
    rpc SignUp(SignUpReq) returns (SignUpRsp) {}
    rpc SignIn(SignInReq) returns (SignInRsp) {}
    rpc GetPersonalInfo(GetPersonalInfoReq) returns (GetPersonalInfoRsp) {}
}

message UserInfo {
    string username = 1;
    string password = 2;
    string sex = 4;
    string phone = 5;
    string role = 6;
}

message SignUpReq {
    string username = 1;
    string password = 2;
    string re_password = 3;
    string sex = 4;
    string phone = 5;
}

message SignUpRsp {
    int64 code = 1;
    string msg = 2;
    string token = 3;
}

message SignInReq {
    string username = 1;
    string password = 2;
}

message SignInRsp {
    int64 code = 1;
    string msg = 2;
    string token = 3;
}

message GetPersonalInfoReq {
    string username = 1;
}

message GetPersonalInfoRsp {
    int64 code = 1;
    string msg = 2;
    UserInfo user = 3;
}
